# Emotive

./: .gitignore  docker-compose.yml  dockerfile
app/: README.md  config.py  pyproject.toml
app/api/: models.py  service.py  urls.py  utils.py  views.py
app/api/migrations/: 0001_initial.py  0002_alter_weatherdata_date.py  0003_alter_weatherdata_air_quality.py  0004_alter_weatherdata_date.py  0005_alter_weatherdata_date.py
app/take_home/: settings.py  urls.py
